--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <div class="wrap">
       <a class="logo" href="index.html">
         <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
       </a>
 
       <button class="nav-toggle" id="navToggleAbout" aria-label="Toggle menu">☰</button>
@@ -157,24 +157,41 @@
       <p class="muted">A small team of statisticians, data analysts and educators focused on clear, practical learning.</p>
 
       <div class="team-grid" aria-label="Team members">
-        <div class="team-card">
-          <div class="team-avatar">SR</div>
-          <strong>Dr. S. Ramesh</strong>
-          <div class="muted" style="font-size:13px;margin-top:6px;">Lead Statistician — Research & Methodology</div>
-        </div>
 
-        <div class="team-card">
-          <div class="team-avatar">AM</div>
-          <strong>A. Meera</strong>
-          <div class="muted" style="font-size:13px;margin-top:6px;">Data Analyst & Workshop Lead</div>
-        </div>
+  <div class="team-card">
+    <div class="team-avatar">
+      <img src="images/Screenshot 2025-12-07 141029.png" alt="Dr. S. Ramesh"
+           style="width:72px;height:72px;border-radius:12px;object-fit:cover;">
+    </div>
+    <strong>Dr. S. Ramesh</strong>
+    <div class="muted" style="font-size:13px;margin-top:6px;">
+      Lead Statistician — Research & Methodology
+    </div>
+  </div>
 
-        <div class="team-card">
-          <div class="team-avatar">KP</div>
-          <strong>K. Paul</strong>
-          <div class="muted" style="font-size:13px;margin-top:6px;">Course Designer & Tutor</div>
-        </div>
-      </div>
+  <div class="team-card">
+    <div class="team-avatar">
+      <img src="images/Screenshot 2025-12-07 141045.png" alt="A. Meera"
+           style="width:72px;height:72px;border-radius:12px;object-fit:cover;">
+    </div>
+    <strong>A. Meera</strong>
+    <div class="muted" style="font-size:13px;margin-top:6px;">
+      Data Analyst & Workshop Lead
+    </div>
+  </div>
+
+  <div class="team-card">
+    <div class="team-avatar">
+      <img src="images/Screenshot 2025-12-07 141100.png" alt="K. Paul"
+           style="width:72px;height:72px;border-radius:12px;object-fit:cover;">
+    </div>
+    <strong>K. Paul</strong>
+    <div class="muted" style="font-size:13px;margin-top:6px;">
+      Course Designer & Tutor
+    </div>
+  </div>
+
+</div>
 
       <div style="margin-top:12px;">
         <a class="btn ghost" href="contact.html">Work with us</a>
@@ -219,7 +236,7 @@
       <div>
         <a class="logo" href="index.html">
           <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
         </a>
       </div>
 
