--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
     <div class="wrap">
       <a class="logo" href="index.html">
         <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+        <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
       </a>
 
       <button class="nav-toggle" id="navToggleServices" aria-label="Toggle menu">☰</button>
@@ -68,9 +68,6 @@
         <aside class="service-right card">
           <div style="display:flex;flex-direction:column;gap:10px;">
             <div><strong class="small-meta">Quick facts</strong></div>
-            <div class="small-meta">• Both free & paid workshops</div>
-            <div class="small-meta">• Google Forms used for registrations</div>
-            <div class="small-meta">• Payment flow supported (Razorpay / PayPal)</div>
             <div style="margin-top:8px;"><a class="btn ghost" href="contact.html">Request a Consultation</a></div>
           </div>
         </aside>
@@ -91,8 +88,8 @@
 
       <div class="service-grid" style="margin-top:12px;">
         <article class="feature-card">
-          <h3>UGC Test Series & Study Materials</h3>
-          <p class="small-meta">Mock tests, past year questions, curated notes and video explanations tailored for UGC NET Paper 2 (Population Studies).</p>
+          <h3>UGC Test Series</h3>
+          <p class="small-meta">Mock tests, past year questions, explanations tailored for UGC NET Paper 2 (Population Studies).</p>
           <div style="margin-top:10px;">
             <a class="btn primary" href="register.html#ugc">Register</a>
             <a class="btn ghost" href="#ugc-full">Details</a>
@@ -103,7 +100,7 @@
           <h3>Workshops & Masterclasses</h3>
           <p class="small-meta">Hands-on short courses — research methods, SPSS, Python for analysis, and visualization.</p>
           <div style="margin-top:10px;">
-            <a class="btn primary" href="register.html#workshops">See schedule</a>
+            <a class="btn primary" href="register.html#workshops">Register</a>
             <a class="btn ghost" href="#workshops-full">Details</a>
           </div>
         </article>
@@ -143,10 +140,10 @@
           <ol class="tests-list">
             <li>
               <strong>Mock Test 01 — Population Studies</strong>
-              <div class="small-meta">50 MCQs • 90 minutes • Objective</div>
+              <div class="small-meta">100 MCQs • 120 minutes • Objective</div>
               <div style="margin-top:6px;">
                 <a class="link" href="#FORM_LINK" target="_blank">Register / Take Test (Google Form)</a> ·
-                <a class="link" href="#">Solutions (PDF)</a>
+                <a class="link" href="#">Solutions</a>
                 <span style="margin-left:8px" class="badge">Active</span>
               </div>
             </li>
@@ -171,7 +168,6 @@
           <div style="margin-top:12px;">
             <strong>Notes:</strong>
             <ul class="small-meta" style="margin-top:6px;">
-              <li>Test links are provided via Google Forms; answers are collected into Google Sheets for review.</li>
               <li>Solutions are published after each test window.</li>
               <li>Join our WhatsApp group for real-time updates: <a href="https://chat.whatsapp.com/J6pgWYeiFouJCM91KUVOg3?mode=hqrt1" target="_blank">Join Group</a></li>
             </ul>
@@ -182,9 +178,8 @@
           <div class="card">
             <h4>Study Materials</h4>
             <ul class="materials-list">
-              <li><a href="#">UGC PYQ compilation (PDF)</a></li>
-              <li><a href="#">Population Studies — concise notes</a></li>
-              <li><a href="#">Model answers & explanation PDFs</a></li>
+              <li><a href="#">UGC PYQ compilation</a></li>
+              <li><a href="#">Model answers & explanation </a></li>
               <li><a href="#">Practice question packs</a></li>
             </ul>
 
@@ -242,6 +237,7 @@
             <p class="small-meta">Practice datasets, SPSS syntax, PPTs</p>
             <div style="margin-top:10px;">
               <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Paid)</a>
+              <span style="margin-left:8px" class="badge">Active</span>
             </div>
           </div>
         </article>
@@ -315,7 +311,7 @@
       <div>
         <a class="logo" href="index.html">
           <img src="logo.png" alt="STATUP logo" class="logo-img" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
         </a>
       </div>
 
