--- a/services.html
+++ b/services.html
@@ -229,7 +229,7 @@
 
         <!-- Workshop 2 -->
         <article class="accordion-item">
-          <button class="acc-head">SPSS Hands-on: Basics → Advanced <span class="small-meta">• 3 days • Paid</span></button>
+          <button class="acc-head">SPSS Hands-on: Basics → Advanced  <span style="margin-left:8px" class="badge">Active</span><span class="small-meta">• 3 days • Paid</span></button>
           <div class="acc-body">
             <h4>Overview</h4>
             <p class="small-meta">Data import, cleaning, hypothesis testing, regression and reporting in SPSS.</p>
@@ -237,7 +237,6 @@
             <p class="small-meta">Practice datasets, SPSS syntax, PPTs</p>
             <div style="margin-top:10px;">
               <a class="btn primary" href="#FORM_LINK" target="_blank">Register (Paid)</a>
-              <span style="margin-left:8px" class="badge">Active</span>
             </div>
           </div>
         </article>
